--- a/index.xhtml
+++ b/index.xhtml
@@ -56,7 +56,7 @@
 					</dd>
 				</dl>
 
-				<h3>Inactive or abandoned projects</h3>
+				<h3>Inactive projects</h3>
 				<dl>
 					<dt><a href="https://github.com/oftn/lic">lic</a></dt>
 					<dd>
