Updated name wording

--- a/index.xhtml
+++ b/index.xhtml
@@ -32,7 +32,7 @@
 				<p>Many of our members are focused on web technologies, but you find quite a wide range of software. Our members are familiar with languages as popular as JavaScript, Ruby, and C, as well as Haskell, Erlang, and Go. Our software should exceed the quality of any open or commercial software around. Programming the best is a goal that can never be reached but we are closer each day.</p>
 
 				<h3>Our name</h3>
-				<p><span class="oftn">ΩF:∅</span> is pronounced like the word <em>often</em>. However, the meaning behind the characters is secret; if you&#8217;re smart you can figure it out.</p>
+				<p><span class="oftn">ΩF:∅</span> is pronounced like the word <em>often</em>. However, the meaning behind the characters is secret; if you&#8217;re resourceful enough you can figure it out.</p>
 
 				<h3>Visit us</h3>
 				<p>We're always chatting in <a href="irc://irc.freenode.net/#oftn">#oftn</a> on the <a href="http://freenode.net/">Freenode IRC network</a>, so feel free to stop by. Alternatively, you can join our <a href="https://plus.google.com/communities/112859235384765702467">Google+ community</a>.</p>
