--- a/index.xhtml
+++ b/index.xhtml
@@ -131,6 +131,7 @@
 					<li class="Kono"><a title="Kono" href="http://www.teamenso.com/">Tamir Atias</a> (Kono)</li>
 					<li class="Nisstyre"><a title="Nisstyre" href="http://stackoverflow.com/users/903589/wes">Wesley Kerfoot</a> (Nisstyre)</li>
 					<li class="Yorick"><a title="Yorick" href="https://github.com/YorickvP">Yorick van Pelt</a> (Yorick)</li>
+					<li class="JesseH"><a title="JesseH" href="https://github.com/jessehorne">Jesse Horne</a> (JesseH)</li>
 				</ul>
 
 				<p>Email <a href="mailto:wg@oftn.org?subject=%CE%A9F%3A%E2%88%85%20Working%20Group%20Membership%20Application">wg@oftn.org</a> to apply for membership.</p>
