--- a/projects/customized-core-estimator/demo/index.html
+++ b/projects/customized-core-estimator/demo/index.html
@@ -169,7 +169,7 @@ a:active { color: rgb(177,181,185); }
 <body>
 
 <div id="cont">
-<h1>Core Estimator Demo</h1>
+<h1>Core Estimator Demo - Fingerprint Edition</h1>
 <p>Core Estimator only provides an estimate of the number of cores on your machine. The value may fluctuate depending on the programs you are currently running, CPU architecture and features, among many other factors. For the most accurate results, close as many external programs and tabs as possible.</p>
 <p>See our <a href="http://blog.wg.oftn.org/post/51125082905/core-estimator">blog post</a> for more details on how it works.</p>
 <a href="#" onclick="run(this); return false;" class="btn btn-large">Begin</a>
