Add SwooshyCueb to index.xhtml

--- a/index.xhtml
+++ b/index.xhtml
@@ -134,6 +134,7 @@
 					<li class="Kono"><a href="http://www.teamenso.com/">Tamir Atias</a> (Kono)</li>
 					<li class="Nisstyre"><a href="http://stackoverflow.com/users/903589/wes">Wesley Kerfoot</a> (Nisstyre)</li>
 					<li class="Yorick"><a href="https://github.com/YorickvP">Yorick van Pelt</a> (Yorick)</li>
+					<li class="SwooshyCueb"><a hfref="http://swooshalicio.us">Markus Kitsinger</a> (SwooshyCueb)</li>
 				</ul>
 
 				<p>Email <a href="mailto:wg@oftn.org?subject=%CE%A9F%3A%E2%88%85%20Working%20Group%20Membership%20Application">wg@oftn.org</a> to apply for membership.</p>
