--- a/index.xhtml
+++ b/index.xhtml
@@ -119,6 +119,7 @@
 					<li class="banister"><a href="http://banisterfiend.wordpress.com/">John Mair</a> (banister)</li>
 					<li class="FireFly"><a href="http://www.firefly.nu/">Jonas Höglund</a> (FireFly)</li>
 					<li class="LJHarb"><a href="https://twitter.com/ljharb">Jordan Harband</a> (LJHarb)</li>
+					<li class="SwooshyCueb"><a href="http://swooshalicio.us">Markus Kitsinger</a> (SwooshyCueb)</li>
 					<li class="mynyml"><a href="http://mynyml.com/">Martin Aumont</a> (mynyml)</li>
 					<li class="matjas"><a href="http://mathiasbynens.be/">Mathias Bynens</a> (matjas)</li>
 					<li class="micahjohnston"><a href="https://github.com/micahjohnston">Micah Johnston</a> (micahjohnston)</li>
@@ -134,7 +135,6 @@
 					<li class="Kono"><a href="http://www.teamenso.com/">Tamir Atias</a> (Kono)</li>
 					<li class="Nisstyre"><a href="http://stackoverflow.com/users/903589/wes">Wesley Kerfoot</a> (Nisstyre)</li>
 					<li class="Yorick"><a href="https://github.com/YorickvP">Yorick van Pelt</a> (Yorick)</li>
-					<li class="SwooshyCueb"><a hfref="http://swooshalicio.us">Markus Kitsinger</a> (SwooshyCueb)</li>
 				</ul>
 
 				<p>Email <a href="mailto:wg@oftn.org?subject=%CE%A9F%3A%E2%88%85%20Working%20Group%20Membership%20Application">wg@oftn.org</a> to apply for membership.</p>
