--- a/index.xhtml
+++ b/index.xhtml
@@ -111,7 +111,7 @@
 					<li class="guy"><a href="http://anuary.com">Gajus Kuizinas</a> (guy)</li>
 					<li class="gf3"><a href="http://gf3.ca/">Gianni Chiappetta</a> (gf3)</li>
 					<li class="guidj0s"><a href="http://guipn.com/">Guilherme Nami</a> (guidj0s)</li>
-					<li class="tjahan"><a href="http://jacata.me/">Jahan Addison</a> (tjahan)</li>
+					<li class="tjahan"><a href="http://jahanaddison.com/">Jahan Addison</a> (tjahan)</li>
 					<li class="jeannicolas"><a href="https://github.com/SilverTab">Jean-Nicolas Jolivet</a> (jeannicolas)</li>
 					<li class="JesseH"><a href="https://github.com/jessehorne">Jesse Horne</a> (JesseH)</li>
 					<li class="joelteon"><a href="http://joelt.io/">Joel Taylor</a> (joelteon)</li>
