Updates info for secrettriangle

--- a/index.xhtml
+++ b/index.xhtml
@@ -107,7 +107,7 @@
 					<li class="cmars"><a href="https://github.com/cmars">Casey Marshall</a> (cmars)</li>
 					<li class="cmr"><a href="http://octayn.net/">Corey Richardson</a> (cmr)</li>
 					<li class="danpalmer"><a href="http://danpalmer.me/">Dan Palmer</a> (danpalmer)</li>
-					<li class="beardtree"><a href="http://beardtree.com/">Dan Kaplun</a> (beardtree)</li>
+					<li class="secrettriangle"><a href="http://secrettriangle.net/">Dan Kaplun</a> (secrettriangle)</li>
 					<li class="guy"><a href="http://anuary.com">Gajus Kuizinas</a> (guy)</li>
 					<li class="gf3"><a href="http://gf3.ca/">Gianni Chiappetta</a> (gf3)</li>
 					<li class="guidj0s"><a href="http://guipn.com/">Guilherme Nami</a> (guidj0s)</li>
