--- a/index.xhtml
+++ b/index.xhtml
@@ -131,7 +131,7 @@
 					<li class="russfrank"><a href="https://github.com/russfrank">Russell Frank</a> (russfrank)</li>
 					<li class="capisce"><a href="https://twitter.com/srodal">Samuel Rødal</a> (capisce)</li>
 					<li class="micrypt"><a href="http://micrypt.com/">Seyi Ogunyemi</a> (micrypt)</li>
-					<li class="Kono"><a href="http://www.teamenso.com/">Tamir Atias</a> (Kono)</li>
+					<li class="tamatias"><a href="https://github.com/tamatias">Tamir Atias</a> (tamatias)</li>
 					<li class="Nisstyre"><a href="http://stackoverflow.com/users/903589/wes">Wesley Kerfoot</a> (Nisstyre)</li>
 					<li class="Yorick"><a href="https://github.com/YorickvP">Yorick van Pelt</a> (Yorick)</li>
 				</ul>
