Added Nicholas Spiridonov

--- a/index.xhtml
+++ b/index.xhtml
@@ -125,6 +125,7 @@
 					<li class="micahjohnston"><a href="https://github.com/micahjohnston">Micah Johnston</a> (micahjohnston)</li>
 					<li class="Navarr"><a href="http://navarr.me/">Navarr Barnier</a> (Navarr)</li>
 					<li class="drudge"><a href="http://penree.com/">Nicholas Penree</a> (drudge)</li>
+					<li class="sohje"><a href="https://github.com/sohje">Nicholas Spiridonov</a> (sohje)</li>
 					<li class="Nuck"><a href="https://github.com/NuckChorris">Peter W. Lejeck</a> (Nuck)</li>
 					<li class="Sorella"><a href="http://killdream.github.com/">Quildreen Motta</a> (Sorella)</li>
 					<li class="systemfault"><a href="http://debugfailure.wordpress.com/">Roger Cyr</a> (systemfault)</li>
