https://wg.oftn.org
Upgraded eligrey.com & oftn.org to https.

--- a/index.xhtml
+++ b/index.xhtml
@@ -15,7 +15,7 @@
 	<p class="tagline">The league of open-source technology beaux esprits.</p>
 	<div id="links">
 		<ul>
-			<li><a href="http://blog.wg.oftn.org"><span class="oftn"><span class="oftn-strong">ΩF:∅</span> Working Group</span> Blog</a></li>
+			<li><a href="https://oftn-wg.tumblr.com"><span class="oftn"><span class="oftn-strong">ΩF:∅</span> Working Group</span> Blog</a></li>
 			<li><a href="https://github.com/oftn">Source Code</a></li>
 		</ul>
 	</div>
@@ -35,7 +35,7 @@
 				<p><span class="oftn">ΩF:∅</span> is pronounced like the word <em>often</em>. However, the meaning behind the characters is secret; if you&#8217;re resourceful enough you can figure it out.</p>
 
 				<h3>Visit us</h3>
-				<p>We're always chatting in <a href="irc://irc.freenode.net/#oftn">#oftn</a> on the <a href="http://freenode.net/">Freenode IRC network</a>, so feel free to stop by. Alternatively, you can join our <a href="https://plus.google.com/communities/112859235384765702467">Google+ community</a>.</p>
+				<p>We're always chatting in <a href="irc://irc.freenode.net/#oftn">#oftn</a> on the <a href="https://freenode.net/">Freenode IRC network</a>, so feel free to stop by. Alternatively, you can join our <a href="https://plus.google.com/communities/112859235384765702467">Google+ community</a>.</p>
 			</div>
 		</div>
 		<div class="panel" id="projects">
@@ -94,7 +94,7 @@
 					<li class="amcgregor"><a href="https://github.com/amcgregor">Alice Bevan–McGregor</a> (amcgregor)</li>
 					<li class="dsamarin"><a href="https://github.com/dsamarin">Devin Samarin</a> (dsamarin)</li>
 					<li class="devyn"><a href="http://github.com/devyn">Devyn Cairns</a> (devyn)</li>
-					<li class="eligrey"><a href="http://eligrey.com/">Eli Grey</a> (eligrey)</li>
+					<li class="eligrey"><a href="https://eligrey.com/">Eli Grey</a> (eligrey)</li>
 					<li class="gkatsev"><a href="http://gkatsev.com/">Gary Katsevman</a> (gkatsev)</li>
 					<li class="inimino"><a href="http://inimino.org/~inimino/blog/">Michaeljohn Clement</a> (inimino)</li>
 					<li class="yrashk"><a href="http://about.me/yrashk">Yurii Rashkovskii</a> (yrashk)</li>
