wg.oftn.org now accepts email

--- a/index.xhtml
+++ b/index.xhtml
@@ -137,7 +137,7 @@
 					<li class="Yorick"><a href="https://github.com/YorickvP">Yorick van Pelt</a> (Yorick)</li>
 				</ul>
 
-				<p>Email <a href="mailto:wg@oftn.org?subject=%CE%A9F%3A%E2%88%85%20Working%20Group%20Membership%20Application">wg@oftn.org</a> to apply for membership.</p>
+				<p>Email <a href="mailto:apply@wg.oftn.org?subject=%CE%A9F%3A%E2%88%85%20Working%20Group%20Membership%20Application">apply@wg.oftn.org</a> to apply for membership.</p>
 			</div>
 		</div>
 	</div>
