--- a/index.xhtml
+++ b/index.xhtml
@@ -127,7 +127,7 @@
 					<li class="drudge"><a href="http://penree.com/">Nicholas Penree</a> (drudge)</li>
 					<li class="sohje"><a href="https://github.com/sohje">Nicholas Spiridonov</a> (sohje)</li>
 					<li class="Nuck"><a href="https://github.com/NuckChorris">Peter W. Lejeck</a> (Nuck)</li>
-					<li class="Sorella"><a href="http://killdream.github.com/">Quildreen Motta</a> (Sorella)</li>
+					<li class="Sorella"><a href="http://robotlolita.me/">Quildreen Motta</a> (Sorella)</li>
 					<li class="systemfault"><a href="http://debugfailure.wordpress.com/">Roger Cyr</a> (systemfault)</li>
 					<li class="russfrank"><a href="https://github.com/russfrank">Russell Frank</a> (russfrank)</li>
 					<li class="capisce"><a href="https://twitter.com/srodal">Samuel Rødal</a> (capisce)</li>
