Changing a GitHub link to HTTPS

--- a/index.xhtml
+++ b/index.xhtml
@@ -91,7 +91,7 @@
 				<h3>Board of Directors</h3>
 				<ul class="members_list">
 					<li class="dsamarin"><a href="https://github.com/dsamarin">Devin Samarin</a> (dsamarin)</li>
-					<li class="devyn"><a href="http://github.com/devyn">Devyn Cairns</a> (devyn)</li>
+					<li class="devyn"><a href="https://github.com/devyn">Devyn Cairns</a> (devyn)</li>
 					<li class="eligrey"><a href="https://eligrey.com/">Eli Grey</a> (eligrey)</li>
 					<li class="gkatsev"><a href="http://gkatsev.com/">Gary Katsevman</a> (gkatsev)</li>
 					<li class="inimino"><a href="http://inimino.org/~inimino/blog/">Michaeljohn Clement</a> (inimino)</li>
