--- a/index.xhtml
+++ b/index.xhtml
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8"/>
 <meta name="description" content="The ΩF:∅ Working Group is an open-source technology consortium that aims to develop useful, high-quality, free, and open-source software and technology for any range of purposes."/>
-<title>ΩF:∅ Working Group</title>
+<title>ΩF:∅ Open Source Working Group</title>
 <meta name="viewport" content="width=device-width"/>
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
 <link rel="stylesheet" type="text/css" href="css/global.css"/>
@@ -11,11 +11,11 @@
 </head>
 <body>
 <header>
-	<h1 class="logo oftn"><span class="oftn-strong">ΩF:∅</span> Working Group</h1>
+	<h1 class="logo oftn"><span class="oftn-strong">ΩF:∅</span> Open Source Working Group</h1>
 	<p class="tagline">The league of open-source technology beaux esprits.</p>
 	<div id="links">
 		<ul>
-			<li><a href="https://oftn-wg.tumblr.com"><span class="oftn"><span class="oftn-strong">ΩF:∅</span> Working Group</span> Blog</a></li>
+			<li><a href="https://oftn-oswg.tumblr.com"><span class="oftn"><span class="oftn-strong">ΩF:∅</span> OSWG</span> Blog</a></li>
 			<li><a href="https://github.com/oftn">Source Code</a></li>
 		</ul>
 	</div>
@@ -26,7 +26,7 @@
 			<div class="panel-inner">
 				<h2>About</h2>
 				<h3>What are we?</h3>
-				<p>The <a href="https://github.com/oftn/" class="oftn"><span class="oftn-strong">ΩF:∅</span> Working Group</a> is an open-source technology consortium that aims to develop useful, high-quality, free, and open-source software and technology to bring the future closer to home.</p>
+				<p>The <a href="https://github.com/oftn/" class="oftn"><span class="oftn-strong">ΩF:∅</span> Open Source Working Group</a> is an open-source technology consortium that aims to develop useful, high-quality, free, and open-source software and technology to bring the future closer to home.</p>
 
 				<h3>What&#8217;s our focus?</h3>
 				<p>Many of our members are focused on web technologies, but you find quite a wide range of software. Our members are familiar with languages as popular as JavaScript, Ruby, and C, as well as Haskell, Erlang, and Go. Our software should exceed the quality of any open or commercial software around. Programming the best is a goal that can never be reached but we are closer each day.</p>
@@ -136,16 +136,16 @@
 					<li class="Yorick"><a href="https://github.com/YorickvP">Yorick van Pelt</a> (Yorick)</li>
 				</ul>
 
-				<p>Email <a href="mailto:apply@wg.oftn.org?subject=%CE%A9F%3A%E2%88%85%20Working%20Group%20Membership%20Application">apply@wg.oftn.org</a> to apply for membership.</p>
+				<p>Email <a href="mailto:apply@oswg.oftn.org?subject=%CE%A9F%3A%E2%88%85%20OSWG%20Membership%20Application">apply@oswg.oftn.org</a> to apply for membership.</p>
 			</div>
 		</div>
 	</div>
 	<footer>
-		© 2016 <span class="oftn">ΩF:∅ Working Group</span> members
+		© 2016 <span class="oftn">ΩF:∅ Open Source Working Group</span> members
 		<ul>
 			<li><a href="https://github.com/oftn/">Watch us</a> on GitHub</li>
 			<li><a href="https://www.facebook.com/oftn.wg">Like us</a> on Facebook</li>
-			<li><a href="https://twitter.com/oftn_wg">Follow us</a> on Twitter</li>
+			<li><a href="https://twitter.com/oftn_oswg">Follow us</a> on Twitter</li>
 		</ul>
 	</footer>
 </div>
