--- a/index.xhtml
+++ b/index.xhtml
@@ -11,7 +11,7 @@
 </head>
 <body>
 <header>
-	<h1 class="logo oftn"><span class="oftn-strong">ΩF:∅</span> Open Source Working Group</h1>
+	<h1 class="logo oftn"><span class="oftn-strong">ΩF:∅</span> OSWG</h1>
 	<p class="tagline">The league of open-source technology beaux esprits.</p>
 	<div id="links">
 		<ul>
