--- a/index.xhtml
+++ b/index.xhtml
@@ -141,7 +141,7 @@
 		</div>
 	</div>
 	<footer>
-		© 2016 <span class="oftn">ΩF:∅ Open Source Working Group</span> members
+		© 2016 OFTN Inc.
 		<ul>
 			<li><a href="https://github.com/oftn/">Watch us</a> on GitHub</li>
 			<li><a href="https://www.facebook.com/oftn.wg">Like us</a> on Facebook</li>
