--- a/index.xhtml
+++ b/index.xhtml
@@ -5,6 +5,7 @@
 <meta name="description" content="The ΩF:∅ Working Group is an open-source technology consortium that aims to develop useful, high-quality, free, and open-source software and technology for any range of purposes."/>
 <title>ΩF:∅ Open Source Working Group</title>
 <meta name="viewport" content="width=device-width"/>
+<meta name="theme-color" content="#000000"/>
 <link rel="stylesheet" type="text/css" href="css/global.css"/>
 <link rel="stylesheet" type="text/css" href="avatars.css"/>
 </head>
