--- a/index.xhtml
+++ b/index.xhtml
@@ -35,7 +35,7 @@
 				<p><span class="oftn">ΩF:∅</span> is pronounced like the word <em>often</em>. However, the meaning behind the characters is secret; if you&#8217;re resourceful enough you can figure it out.</p>
 
 				<h3>Visit us</h3>
-				<p>We're always chatting in <a href="irc://irc.freenode.net/#oftn">#oftn</a> on the <a href="https://freenode.net/">Freenode IRC network</a>, so feel free to stop by. Also check out the <a href="mumble://talk.oftn.org">Mumble server</a> that we use for voice chat.</p>
+				<p>We're always chatting in <a href="irc://irc.freenode.net/#oftn">#oftn</a> on the <a href="https://freenode.net/">Freenode IRC network</a>, so feel free to stop by. Also check out the <a href="https://talk.oftn.org">Mumble server</a> that we use for voice chat.</p>
 			</div>
 		</div>
 		<div class="panel" id="projects">
