Update GitHub links

--- a/index.xhtml
+++ b/index.xhtml
@@ -16,7 +16,7 @@
 	<div id="links">
 		<ul>
 			<li><a href="https://oftn-oswg.tumblr.com"><span class="oftn"><span class="oftn-strong">ΩF:∅</span> OSWG</span> Blog</a></li>
-			<li><a href="https://github.com/oftn">Source Code</a></li>
+			<li><a href="https://github.com/oftn-oswg">Source Code</a></li>
 		</ul>
 	</div>
 </header>
@@ -26,7 +26,7 @@
 			<div class="panel-inner">
 				<h2>About</h2>
 				<h3>What are we?</h3>
-				<p>The <a href="https://github.com/oftn/" class="oftn"><span class="oftn-strong">ΩF:∅</span> Open Source Working Group</a> is an open-source technology consortium that aims to develop useful, high-quality, free, and open-source software and technology to bring the future closer to home.</p>
+				<p>The <a href="https://github.com/oftn-oswg" class="oftn"><span class="oftn-strong">ΩF:∅</span> Open Source Working Group</a> is an open-source technology consortium that aims to develop useful, high-quality, free, and open-source software and technology to bring the future closer to home.</p>
 
 				<h3>What&#8217;s our focus?</h3>
 				<p>Many of our members are focused on web technologies, but you find quite a wide range of software. Our members are familiar with languages as popular as JavaScript, Ruby, and C, as well as Haskell, Erlang, and Go. Our software should exceed the quality of any open or commercial software around. Programming the best is a goal that can never be reached but we are closer each day.</p>
@@ -42,15 +42,15 @@
 			<div class="panel-inner">
 				<h2>Projects</h2>
 				<h3>Active projects</h3>
-				<p>We are committed to the open-source philosophy. Every bit of our software is available to inspect and modify freely and can be found hosted with the wonderful <a href="https://github.com/oftn/">GitHub</a> service.</p>
+				<p>We are committed to the open-source philosophy. Every bit of our software is available to inspect and modify freely and can be found hosted with the wonderful <a href="https://github.com/oftn-oswg">GitHub</a> service.</p>
 				<dl>
 
-					<dt><a href="https://github.com/oftn/core-estimator">Core Estimator</a></dt>
+					<dt><a href="https://github.com/oftn-oswg/core-estimator">Core Estimator</a></dt>
 					<dd>
 						<p>Core Estimator is a JavaScript library for the browser which is designed to help find the optimum number of web workers to use in parallel by taking advantage of timing. View our <a href="projects/core-estimator/demo/">live demo</a>.</p>
 					</dd>
 
-					<dt><a href="https://github.com/oftn/oftn-bot">oftn-bot</a></dt>
+					<dt><a href="https://github.com/oftn-oswg/oftn-bot">oftn-bot</a></dt>
 					<dd>
 						<p>State-of-the-art IRC bot library and bot for Node.js. Try oftn-bot in <a href="irc://irc.freenode.net/#oftn">#oftn on irc.freenode.net</a>.</p>
 					</dd>
@@ -58,27 +58,27 @@
 
 				<h3>Inactive projects</h3>
 				<dl>
-					<dt><a href="https://github.com/oftn/lic">lic</a></dt>
+					<dt><a href="https://github.com/oftn-oswg/lic">lic</a></dt>
 					<dd>
 						<p>lic (pronounced like lick) is an experimental and new IRC client and framework. It consists of a central hub which maintains persistent connections and attachable clients which serve as an interface to the hub. It is based on Node.js which allows you to access all of the standard API along with lic&#8217;s easy to use API.</p>
 					</dd>
 
-					<dt><a href="https://github.com/oftn/l10n.js">l10n.js</a></dt>
+					<dt><a href="https://github.com/oftn-oswg/l10n.js">l10n.js</a></dt>
 					<dd>
 						<p>l10n.js is a JavaScript library that enables passive localization through native JavaScript methods, gracefully degrading if the library is not present. You can make Ajax applications, JavaScript libraries, etc. that can be localized but not require l10n.js to function. There is already a placeholder method for all API calls as specified in the ECMAScript specification and is present in all JavaScript engines, so when l10n.js isn&#8217;t present, your application works fine. Visit the <a href="http://purl.eligrey.com/l10n.js/demo">online demo</a> to see l10n.js in action.</p>
 					</dd>
 
-					<dt><a href="https://github.com/oftn/DartMark">DartMark</a></dt>
+					<dt><a href="https://github.com/oftn-oswg/DartMark">DartMark</a></dt>
 					<dd>
 						<p>DartMark is an in-browser WYSIWYG editor with a focus on fast prototyping. The main benefits of it are speed, ease-of-use, and configurability. All actions can be performed with just a keyboard. Your editor is now your previewer, so there is no need to switch back and forth between a separate editor and a browser to preview. And because it&#8217;s written in-browser, DartMark will let you define your own keyboard shortcuts and special JavaScript function macros. Try out a <a href="projects/dartmark/">working version</a>.</p>
 					</dd>
 
-					<dt><a href="https://github.com/oftn/suit-js">The SUIT Canvas Toolkit</a></dt>
+					<dt><a href="https://github.com/oftn-oswg/suit-js">The SUIT Canvas Toolkit</a></dt>
 					<dd>
 						<p>The SUIT Canvas Toolkit is meant to be an easy-to-use, beautiful, and fully-featured UI toolkit for the HTML5 canvas. There are some specialized web applications that require more than just what can be achieved with normal DOM methods. With canvas, you get more flexibility in the design, look-and-feel, and controls. Rendering and page layout also works while hardly having to worry about how things will look and behave in another browser. Besides being useful to you, this was started as an experiment to see how UI toolkits can work in the browser environment. Visit the <a href="projects/suit/">demo page</a>.</p>
 					</dd>
 
-					<dt><a href="https://github.com/oftn/TPFS">TPFS</a></dt>
+					<dt><a href="https://github.com/oftn-oswg/TPFS">TPFS</a></dt>
 					<dd>
 						<p>TPFS (the Tagged Plain File System) is a revolutionary new file system that aims to move beyond the rut of hierarchical file systems through a purely tag based model. There are only two objects in TPFS: files and tags. They share a many-to-many relationship; files can have many different tags, and tags can have many different files. It is designed to be quick to look up in both directions.</p>
 					</dd>
@@ -143,7 +143,7 @@
 	<footer>
 		© 2016 OFTN Inc.
 		<ul>
-			<li><a href="https://github.com/oftn/">Watch us</a> on GitHub</li>
+			<li><a href="https://github.com/oftn-oswg/">Watch us</a> on GitHub</li>
 			<li><a href="https://www.facebook.com/oftn.wg">Like us</a> on Facebook</li>
 			<li><a href="https://twitter.com/oftn_oswg">Follow us</a> on Twitter</li>
 		</ul>
