Add emoji favicons

--- a/index.xhtml
+++ b/index.xhtml
@@ -149,6 +149,7 @@
 		</ul>
 	</footer>
 </div>
+<script type="application/ecmascript" async="" defer="" src="/emoji-favicon-toolkit.min.js"/>
 <script type="application/ecmascript" src="js/oftn/site.js"/>
 </body>
 </html>
