Added David Adler

--- a/index.xhtml
+++ b/index.xhtml
@@ -104,33 +104,34 @@
 					<li class="prophile"><a href="https://github.com/prophile">Alistair Lynn</a> (prophile)</li>
 					<li class="oksushi"><a href="http://theworkingparty.com.au/">Cal Wilson</a> (oksushi)</li>
 					<li class="cmars"><a href="https://github.com/cmars">Casey Marshall</a> (cmars)</li>
-					<li class="cmr"><a href="http://octayn.net/">Corey Richardson</a> (cmr)</li>
-					<li class="danpalmer"><a href="http://danpalmer.me/">Dan Palmer</a> (danpalmer)</li>
-					<li class="dbkaplun"><a href="http://dbkaplun.com/">Dan Kaplun</a> (dbkaplun)</li>
+					<li class="cmr"><a href="https://octayn.net">Corey Richardson</a> (cmr)</li>
+					<li class="danpalmer"><a href="http://danpalmer.me">Dan Palmer</a> (danpalmer)</li>
+					<li class="dbkaplun"><a href="http://dbkaplun.com">Dan Kaplun</a> (dbkaplun)</li>
+					<li class="mfbx9da4"><a href="https://davidalbertoadler.com">David Adler</a> (mfbx9da4)</li>
 					<li class="guy"><a href="http://anuary.com">Gajus Kuizinas</a> (guy)</li>
-					<li class="gf3"><a href="http://gf3.ca/">Gianni Chiappetta</a> (gf3)</li>
-					<li class="guidj0s"><a href="http://guipn.com/">Guilherme Nami</a> (guidj0s)</li>
-					<li class="tjahan"><a href="http://jahanaddison.com/">Jahan Addison</a> (tjahan)</li>
+					<li class="gf3"><a href="http://gf3.ca">Gianni Chiappetta</a> (gf3)</li>
+					<li class="guidj0s"><a href="http://guipn.com">Guilherme Nami</a> (guidj0s)</li>
+					<li class="tjahan"><a href="http://jahanaddison.com">Jahan Addison</a> (tjahan)</li>
 					<li class="jeannicolas"><a href="https://github.com/SilverTab">Jean-Nicolas Jolivet</a> (jeannicolas)</li>
 					<li class="JesseH"><a href="https://github.com/jessehorne">Jesse Horne</a> (JesseH)</li>
-					<li class="joelteon"><a href="http://joelt.io/">Joel Taylor</a> (joelteon)</li>
-					<li class="ImBcmDth"><a href="http://jon-carlos.com/">Jon-Carlos Rivera</a> (ImBcmDth)</li>
-					<li class="banister"><a href="http://banisterfiend.wordpress.com/">John Mair</a> (banister)</li>
-					<li class="FireFly"><a href="http://www.firefly.nu/">Jonas Höglund</a> (FireFly)</li>
+					<li class="joelteon"><a href="http://joelt.io">Joel Taylor</a> (joelteon)</li>
+					<li class="ImBcmDth"><a href="http://jon-carlos.com">Jon-Carlos Rivera</a> (ImBcmDth)</li>
+					<li class="banister"><a href="http://banisterfiend.wordpress.com">John Mair</a> (banister)</li>
+					<li class="FireFly"><a href="http://www.firefly.nu">Jonas Höglund</a> (FireFly)</li>
 					<li class="LJHarb"><a href="https://twitter.com/ljharb">Jordan Harband</a> (LJHarb)</li>
 					<li class="SwooshyCueb"><a href="http://swooshalicio.us">Markus Kitsinger</a> (SwooshyCueb)</li>
-					<li class="mynyml"><a href="http://mynyml.com/">Martin Aumont</a> (mynyml)</li>
-					<li class="matjas"><a href="http://mathiasbynens.be/">Mathias Bynens</a> (matjas)</li>
+					<li class="mynyml"><a href="http://mynyml.com">Martin Aumont</a> (mynyml)</li>
+					<li class="matjas"><a href="http://mathiasbynens.be">Mathias Bynens</a> (matjas)</li>
 					<li class="micahjohnston"><a href="https://github.com/micahjohnston">Micah Johnston</a> (micahjohnston)</li>
-					<li class="Navarr"><a href="http://navarr.me/">Navarr Barnier</a> (Navarr)</li>
-					<li class="drudge"><a href="http://penree.com/">Nicholas Penree</a> (drudge)</li>
+					<li class="Navarr"><a href="http://navarr.me">Navarr Barnier</a> (Navarr)</li>
+					<li class="drudge"><a href="http://penree.com">Nicholas Penree</a> (drudge)</li>
 					<li class="sohje"><a href="https://github.com/sohje">Nicholas Spiridonov</a> (sohje)</li>
 					<li class="Nuck"><a href="https://github.com/NuckChorris">Peter W. Lejeck</a> (Nuck)</li>
 					<li class="Sorella"><a href="http://robotlolita.me/">Quildreen Motta</a> (Sorella)</li>
-					<li class="systemfault"><a href="http://debugfailure.wordpress.com/">Roger Cyr</a> (systemfault)</li>
+					<li class="systemfault"><a href="http://debugfailure.wordpress.com">Roger Cyr</a> (systemfault)</li>
 					<li class="russfrank"><a href="https://github.com/russfrank">Russell Frank</a> (russfrank)</li>
 					<li class="capisce"><a href="https://twitter.com/srodal">Samuel Rødal</a> (capisce)</li>
-					<li class="micrypt"><a href="http://micrypt.com/">Seyi Ogunyemi</a> (micrypt)</li>
+					<li class="micrypt"><a href="http://micrypt.com">Seyi Ogunyemi</a> (micrypt)</li>
 					<li class="tamatias"><a href="https://github.com/tamatias">Tamir Atias</a> (tamatias)</li>
 					<li class="Nisstyre"><a href="http://stackoverflow.com/users/903589/wes">Wesley Kerfoot</a> (Nisstyre)</li>
 					<li class="Yorick"><a href="https://github.com/YorickvP">Yorick van Pelt</a> (Yorick)</li>
