--- a/index.xhtml
+++ b/index.xhtml
@@ -45,6 +45,11 @@
 				<p>We are committed to the open-source philosophy. Every bit of our software is available to inspect and modify freely and can be found hosted with the wonderful <a href="https://github.com/oftn-oswg">GitHub</a> service.</p>
 				<dl>
 
+					<dt><a href="https://github.com/oftn-oswg/zerodrop">Zerodrop</a></dt>
+					<dd>
+						<p>Zerodrop is a stealth malware dropper written in Go with a powerful web UI, supporting target geofencing, datacenter URL scanner exclusion, blacklist training, manual blacklisting/whitelisting, and advanced payload configuration. </p>
+					</dd>
+
 					<dt><a href="https://github.com/oftn-oswg/core-estimator">Core Estimator</a></dt>
 					<dd>
 						<p>Core Estimator is a JavaScript library for the browser which is designed to help find the optimum number of web workers to use in parallel by taking advantage of timing. View our <a href="projects/core-estimator/demo/">live demo</a>.</p>
